@@ -1,3 +1,9 @@
+2005-10-12  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Update the links for some GTK+ stock icons
+	to have -ltr and -rtl suffixes. Thanks to Luca Ferretti
+	Add some more links for KDE icons. Thanks to Niko Mirthes for the patch
+
 2005-10-09  Jakub Steiner <jimmac@ximian.com>
 
 	* legacy-icon-mapping.xml: add application/zip
